--- a/2021-02-18-Devlog2.md
+++ b/2021-02-18-Devlog2.md
@@ -2,6 +2,7 @@
 
 This week I re-familiarized myself with programming in p5.js, working with sounds/images and messing around with PolySynth. I created a small “jam session” program where there is a drum loop playing and the user can play chords in C Major using buttons. There is also a distortion button which distorts the output and a rate slider which changes the speed of the drum loop. One problem I ran into was, when changing the playback rate of the drum loops with the slider, it seems to duplicate the audio, playing one version at normal speed while the sped up/slowed down version seems to play over it. After the first loop is done however, the sped up/slowed down version plays by itself. I think this might have something to do with the order in which I have the code, but I’ll have to continue debugging.
 
+![p5.js program]({{site.baseurl}}/Screen Shot 2021-02-18 at 11.46.34 AM.png)
 
 Playing with No.Paint was really entertaining. I think what made it so fun was the sounds. They were all very cartoony and made the experience feel silly and goofy. I could see this app being really annoying if it was done in a different way but it is very successful as is. I was pondering the question of whether or not this is a collaboration with the program or not. I seem to waver back and forth on this question whenever I am presented with it, but today I think that it is not a collaboration. I think that it is a tool that I am using, and even though it’s a really easy and fun tool, it is a tool that I am using. The main reason I think this, is because in the end, I am the one deciding whether I like the outcome or not, because I have feelings. This app does not have feelings, it is merely presenting me with options. It reminds me of when I am making music using a Digital Audio Workstation and using various VST/AU plugins. Many times plugins will have many remade patches created by the developer, to teach you how to use the tool, as well as showcase the possibilities of the tool. Depending on what mood I am in, I will either scroll through these presets until one of them stands out to me, or I will make my own patch, drawing inspiration from some of the preset patches. No.Paint seemed similar to me because although I could use the preset gestures and click yes or no, I felt like once I had seen all of them I wanted to dive deeper into it and see how it worked. I think this definitely makes a successful, fun tool, but I wouldn’t say I am “collaborating” with the tool any more than a painter is “collaborating” with their paintbrush. 
 
